--- a/WCSTrainer/Pages/Skills/Assign.cshtml
+++ b/WCSTrainer/Pages/Skills/Assign.cshtml
@@ -1,5 +1,10 @@
 ﻿@page
 @model AssignModel
+
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
+
 @{
    ViewData["Title"] = "Assign";
 }
@@ -14,63 +19,72 @@
          <div class="user-form">
             <p class="title">Assign Skill #@Model.Skill.Id</p>
             <div class="field-container">
-               <form method="post">
-                  <div asp-validation-summary="All" class="text-danger"></div>
-                  <input hidden asp-for="Skill.Id" />
-                  <input hidden asp-for="Skill.Name"/>
-                  <input hidden asp-for="Skill.Description" />
-                  <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
-                  <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
-@*                   <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Trainers</p>
-                           <span asp-validation-for="@Model.SelectedTrainerString" class="text-danger"></span>
-                        </div>
-                        <div class="selections">
-                           <ul id="trainerList" class="pill-container">
-                           </ul>
-                           <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select</p></div>
-                           <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
-                        </div>
-                     </div>
+               @if (SignInManager.IsSignedIn(User)) {
+                  var user = await UserManager.GetUserAsync(User);
+                  if (user != null) {
+                     <form method="post">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <input hidden asp-for="Skill.Id" />
+                        <input hidden asp-for="Skill.Name" />
+                        <input hidden asp-for="Skill.Description" />
+                        <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
+                        <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
+                        @*                   <div class="form-group">
+                  <div class="form">
+                  <div class="labels">
+                  <p class="control-label">Trainers</p>
+                  <span asp-validation-for="@Model.SelectedTrainerString" class="text-danger"></span>
+                  </div>
+                  <div class="selections">
+                  <ul id="trainerList" class="pill-container">
+                  </ul>
+                  <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select</p></div>
+                  <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
+                  </div>
+                  </div>
                   </div>
                   <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Trainer Groups</p>
-                           <span asp-validation-for="@Model.SelectedTrainerGroupString" class="text-danger"></span>
-                        </div>
-                        <div class="selections">
-                           <ul id="groupList" class="pill-container">
-                           </ul>
-                           <div class="btn bg-btn btnWhite" onclick="openComponent('groups')">Select</div>
-                           <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
-                        </div>
-                     </div>
+                  <div class="form">
+                  <div class="labels">
+                  <p class="control-label">Trainer Groups</p>
+                  <span asp-validation-for="@Model.SelectedTrainerGroupString" class="text-danger"></span>
+                  </div>
+                  <div class="selections">
+                  <ul id="groupList" class="pill-container">
+                  </ul>
+                  <div class="btn bg-btn btnWhite" onclick="openComponent('groups')">Select</div>
+                  <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
+                  </div>
+                  </div>
                   </div> *@
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Trainee</p>
-                           <span asp-validation-for="@Model.SelectedTraineeId" class="text-danger"></span>
+                        <div class="form-group">
+                           <div class="form">
+                              <div class="labels">
+                                 <p class="control-label">Trainee</p>
+                                 <span asp-validation-for="@Model.SelectedTraineeId" class="text-danger"></span>
+                              </div>
+                              <div class="selections">
+                                 <ul id="trainee" class="pill-container">
+                                 </ul>
+                                 <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select</p></div>
+                                 <input id="traineeInput" asp-for="@Model.SelectedTraineeId" hidden />
+                              </div>
+                           </div>
                         </div>
-                        <div class="selections">
-                           <ul id="trainee" class="pill-container">
-                           </ul>
-                           <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select</p></div>
-                           <input id="traineeInput" asp-for="@Model.SelectedTraineeId" hidden />
+                        <div class="form-group">
+                           <div class="form">
+                              <div class="btn-container">
+                                 <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                              </div>
+                           </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="btn-container">
-                           <input type="submit" value="Save" class="btn bg-btn btnGreen" />
-                        </div>
-                     </div>
-                  </div>
-               </form>
+                     </form>
+                  } else {
+                     <p>User invalid.</p>
+                  }
+               } else {
+                  <p>Not signed in.</p>
+               }
             </div>
          </div>
       </div>
