--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -31,6 +31,7 @@
                      <input asp-for="TrainingOrder.LessonId" type="hidden" />
                      <input asp-for="TrainingOrder.ClosingNotes" hidden />
 
+                     <input asp-for="TrainingOrder.ParentSkillId" hidden />
                      <input asp-for="TrainingOrder.TraineeId" hidden />
                      <input asp-for="TrainingOrder.LocationId" hidden />
                      <input asp-for="TrainingOrder.CreatedByUserId" hidden />
