--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -50,13 +50,12 @@
                         <div class="form-group">
                            <div class="form">
                               <div class="labels">
-                                 <p class="control-label">Description</p>
+                                 <p class="control-label">Lesson</p>
                                  <span asp-validation-for="TrainingOrder.LessonId" class="text-danger"></span>
                               </div>
                               <input asp-for="TrainingOrder.LessonId" class="form-control" />
                            </div>
                         </div>
-                        
                         <div class="form-group">
                            <div class="form">
                               <div class="btn-container">
