--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -23,6 +23,7 @@
                      <input asp-for="TrainingOrder.CompletionDate" hidden />
                      <input asp-for="TrainingOrder.CreateDate" hidden />
                      <input asp-for="TrainingOrder.Status" hidden />
+                     <input asp-for="TrainingOrder.ParentSkillId" hidden />
                      <input asp-for="TrainingOrder.CreatedByUserId" hidden />
 
                      <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
@@ -83,15 +84,6 @@
                            </div>
                         </div>
                      </div>
-                     <div class="form-group">
-                        <div class="form">
-                           <div class="labels">
-                              <p class="control-label">Description</p>
-                              <span asp-validation-for="TrainingOrder.LessonId" class="text-danger"></span>
-                           </div>
-                           <input asp-for="TrainingOrder.LessonId" class="form-control" />
-                        </div>
-                     </div>
                      @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
                         <div class="form-group">
                            <div class="form">
@@ -113,30 +105,39 @@
                               </select>
                            </div>
                         </div>
-                     }
-                     <div class="form-group">
-                        <div class="form">
-                           <div class="labels">
-                              <p class="control-label">Learning Medium</p>
-                              <span asp-validation-for="TrainingOrder.Medium" class="text-danger"></span>
+                        <div class="form-group">
+                           <div class="form">
+                              <div class="labels">
+                                 <p class="control-label">Learning Medium</p>
+                                 <span asp-validation-for="TrainingOrder.Medium" class="text-danger"></span>
+                              </div>
+                              <input asp-for="TrainingOrder.Medium" class="form-control" />
                            </div>
-                           <input asp-for="TrainingOrder.Medium" class="form-control" />
-                        </div>
-                        <div class="form">
-                           <div class="labels">
-                              <p class="control-label">Location</p>
-                              <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
+                           <div class="form">
+                              <div class="labels">
+                                 <p class="control-label">Location</p>
+                                 <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
+                              </div>
+                              <select asp-for="TrainingOrder.LocationId" class="form-drop2" asp-items="@Model.Locations">
+                              </select>
                            </div>
-                           <select asp-for="TrainingOrder.LocationId" class="form-drop2" asp-items="@Model.Locations">
-                           </select>
-                        </div>
-                        @if (Model.TrainingOrder.Status == "Awaiting Approval" || Model.TrainingOrder.Status == "Active") {
                            <div class="form">
                               <div class="labels">
                                  <p class="control-label">Begin Date</p>
                                  <span asp-validation-for="TrainingOrder.BeginDate" class="text-danger"></span>
                               </div>
-                              <input type="date" asp-for="TrainingOrder.BeginDate" class="form-control" />
+                              <input type="date" asp-for="TrainingOrder.BeginDate" hidden />
+                           </div>
+                        </div>
+                     }
+                     <div class="form-group">
+                        @if (Model.TrainingOrder.Status == "Awaiting Approval" || Model.TrainingOrder.Status == "Active") {
+                           <div class="form">
+                              <div class="labels">
+                                 <p class="control-label">Lesson</p>
+                                 <span asp-validation-for="TrainingOrder.LessonId" class="text-danger"></span>
+                              </div>
+                              <input asp-for="TrainingOrder.LessonId" class="form-control" />
                            </div>
                         }
                      </div>
