--- a/WCSTrainer/Pages/Locations/Details.cshtml
+++ b/WCSTrainer/Pages/Locations/Details.cshtml
@@ -10,7 +10,7 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Employee #@Model.Location.Id</p>
+            <p class="title">Location #@Model.Location.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
