--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -38,7 +38,8 @@
                                  <p class="control-label">Description</p>
                                  <span asp-validation-for="Lesson.Description" class="text-danger"></span>
                               </div>
-                              <input asp-for="Lesson.Description" class="form-control" />
+                              <textarea rows="5" asp-for="Lesson.Description" placeholder="Describe the steps needed to complete this lesson." >
+                              </textarea>
                            </div>
                         </div>
                         <div class="form-group">
