--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -31,7 +31,8 @@
                            <label asp-for="Lesson.Description" class="control-label"></label>
                            <span asp-validation-for="Lesson.Description" class="text-danger"></span>
                         </div>
-                        <input asp-for="Lesson.Description" class="form-control" />
+                        <textarea rows="5" asp-for="Lesson.Description" placeholder="Describe the steps needed to complete this lesson.">
+                        </textarea>
                      </div>
                   </div>
                   <div class="form-group">
