--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -42,7 +42,9 @@
                               </div>
                               <div class="selections">
                                  <ul id="trainee" class="pill-container"></ul>
-                                 <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select Trainee</p></div>
+                                 <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')">
+                                    <p>Select Trainee</p>
+                                 </div>
                                  <input id="traineeInput" asp-for="TrainingOrder.TraineeId" hidden />
                               </div>
                            </div>
